--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "load01",
+  "name": "logon_black-white",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,8 +12,7 @@
     "node-sass": "^4.14.1",
     "router": "^1.3.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.5.3",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.5.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
