--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.4.1",
+    "@vueuse/motion": "^2.0.0-beta.4",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
     "node-sass": "^4.14.1",
