--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
+    "github-markdown-css": "^5.1.0",
+    "highlight.js": "^11.3.1",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-loader": "^15.9.8",
+    "vue-markdown-loader": "^2.5.0",
+    "vue-template-compiler": "^2.6.14"
   }
 }
